# parcial-2-lp

./: .gitignore  README.md
punto-1-2-nosql-crud/: .gitignore  pyproject.toml  requirements.txt
punto-1-2-nosql-crud/grammar/: grammar1.g4
punto-1-2-nosql-crud/scripts/: generate_parser.ps1  generate_parser_ubuntu.sh
punto-1-2-nosql-crud/src/: main.py
punto-1-2-nosql-crud/src/nosql_dsl/: __init__.py  interpreter.py  parser.py
punto-1-2-nosql-crud/tests/: test_crud.nosql  test_interpreter.py  test_lexer.py  test_parser.py
punto-3-ambiguedad/: correccion.md  demostracion.md  verificacion.md
punto-4-cyk-calculator/: README.md  pyproject.toml
punto-4-cyk-calculator/comparaciones/: analisis.md  resultados.csv
punto-4-cyk-calculator/src/: benchmark.py  cyk_parser.py  main.py  predictive_parser.py  tokenizer.py
punto-4-cyk-calculator/tests/: test_calculators.py
punto-5-recursive-descent/: README.md  pyproject.toml
punto-5-recursive-descent/src/: recursive_descent.py  tokenizer.py
punto-5-recursive-descent/tests/: test_parser.py
